--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # the available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+title                    : "Ishai Dan-Cohen"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+name                     : &name "Ishai Dan-Cohen"
+description              : &description "Ishai Dan-Cohen's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://ishaidcgit.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -24,13 +24,13 @@ repository               : "ishaidcgit/ishaidcgit.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Ishai Dan-Cohen"
+  pronouns         : "he/him" # example: "she/her"  
+  bio              : #"Short biography for the left-hand sidebar"
+  location         : #"Earth"
+  employer         : "Ben Gurion University of the Negev"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "ishaida@bgu.ac.il" 
 
   # Academic websites
   academia         : # URL
